locations page skeleton

--- a/views/locations-page.html
+++ b/views/locations-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emile Zola</title>
+    <title>Emile's locations'</title>
     <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,20 +16,9 @@
   </head>
   <body>
     <div class="page-container">
-      <h1>Emile Zola</h1>
-      <img src="/images/Emile.jpg" alt="Emile Zola engraving" />
-      <section id="intro">
-        <h2>Welcome to a tribute page to the French novelist Emile Zola.</h2>
-        <p>
-          If you'd like to know more about him (you do), click on the link below
-          to discover about his life, works and locations linked to him.
-        </p>
-      </section>
-      <section id="nav-links">
-        <a href="/about" class="link">About</a>
-        <a href="/works" class="link">Works</a>
-        <a href="/locations" class="link">Locations</a>
-      </section>
+      <h1>Where to pay respect?</h1>
+      <section id="emile-locations" class="gallery"></section>
+      <a href="/" class="link">Back Home</a>
     </div>
   </body>
 </html>
