--- a/views/works-page.html
+++ b/views/works-page.html
@@ -15,6 +15,63 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <div class="page-container"></div>
+    <div class="page-container">
+      <h1>What was he up to?</h1>
+      <section class="paragraph">
+        <h3>Contes à Ninon & Thérèse Raquin</h3>
+        <p>
+          Contes à Ninon, published in 1864 is one of the first book written by Emile. It's a collection of short stories written when he was young.<br/>
+          Thérèse Raquin, first published in serial form in the literary magazine L'Artiste in 1867 and as novel in 1868, it's the first novel to earn wide fame.<br/>
+          Thérèse Raquin tells the story of a young woman, unhappily married to her first cousin by an overbearing aunt,
+           who may seem to be well-intentioned but in many ways is deeply selfish. Thérèse's husband, Camille, is sickly and 
+           egocentric and when the opportunity arises, Thérèse enters into a turbulent and sordidly passionate affair with one of Camille's friends, Laurent.<br/>
+           The novel's adultery and murder were considered scandalous. In his preface, Zola explains that his goal in this novel 
+           was to "study temperaments and not characters". Because of this detached and scientific approach, Thérèse Raquin is considered an example of naturalism.
+        </p>
+      </section>
+       <section class="paragraph">
+        <h3>Les Rougon-Macquart</h3>
+        <p>
+          Les Rougon-Macquart is the collective title given to a cycle of twenty novels written between 1871 and 1893. Subtitled Histoire naturelle et sociale d'une famille
+          sous le Second Empire (Natural and social history of a family under the Second Empire),
+          it follows the lives of the members of the two titular branches of a fictional family 
+          living during the Second French Empire (1852–1870) and is one of the most prominent works of the French naturalism literary movement.<br/>
+          <ul>List of bookes</ul>
+          <li>La Fortune des Rougon (1871)</li>
+          <li>La Curée (1871–2)</li>
+          <li>Le Ventre de Paris (1873)</li>
+          <li>La Conquête de Plassans (1874)</li>
+          <li>La Faute de l'Abbé Mouret (1875)</li>
+          <li>Son Excellence Eugène Rougon (1876)</li>
+          <li>L'Assommoir (1877)</li>
+          <li>Une page d'amour (1878</li>
+          <li>Nana (1880)</li>
+          <li>Pot-Bouille (1882)</li>
+          <li>Au Bonheur des Dames (1883)</li>
+          <li>La joie de vivre (1884)</li>
+          <li>Germinal (1885)</li>
+          <li>L'Œuvre (1886)</li>
+          <li>La Terre (1887)</li>
+          <li>Le Rêve (1888)</li>
+          <li>La Bête humaine (1890)</li>
+          <li>L'Argent (1891)</li>
+          <li>La Débâcle (1892)</li>  
+ <li>Le Docteur Pascal (1893)</li>  
+
+        </p>
+      </section>
+
+      <section class="paragraph">
+        <h3>J'Accuse!        </h3>
+        <p>"J'Accuse...!" is an open letter that was published on 13 January 1898 in the newspaper L'Aurore by Émile Zola in response to the Dreyfus affair. <br/>
+          Zola addressed President of France Félix Faure and accused his government of antisemitism and the unlawful jailing of Alfred Dreyfus,
+           a French Army General Staff officer who was sentenced to lifelong penal servitude for espionage.<br/>
+            Zola pointed out judicial errors and lack of serious evidence. The letter was printed on the front page of the newspaper and caused a stir in France and abroad.
+            <br/> Zola was prosecuted for libel and found guilty on 23 February 1898. To avoid imprisonment, he fled to England, returning home in June 1899.</p>
+      </section>
+
+
+      <a href="/" class="link">Back Home</a>
+    </div>
   </body>
 </html>
