--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,19 @@ p {
   font-size: 1.5rem;
 }
 
+ul {
+  font-size: 1.7rem;
+  font-weight: bold;
+  list-style: none;
+  color: #345b63;
+  padding: 0;
+}
+
+li {
+  list-style: square;
+  font-size: 1.5rem;
+}
+
 .page-container {
   display: flex;
   flex-direction: column;
