--- a/views/locations-page.html
+++ b/views/locations-page.html
@@ -17,7 +17,24 @@
   <body>
     <div class="page-container">
       <h1>Where to pay respect?</h1>
-      <section id="emile-locations" class="gallery"></section>
+      <section id="emile-locations" class="gallery">
+        <div class="card">
+          <img src="/images/aix.jpg" alt="statue in Aix en Provence" />
+          <p>Statue in Aix-en-Provence</p>
+        </div>
+        <div class="card">
+          <img src="/images/medan.jpg" alt="house in Medan" />
+          <p>House in Medan, purchased with the sales of Germinal and Nana</p>
+        </div>
+        <div class="card">
+          <img src="/images/montmartre.jpg" alt="Tombstone in Montmartre" />
+          <p>Tombstone in Montmartre where he was originally buried</p>
+        </div>
+        <div class="card">
+          <img src="/images/Panthéon_Émile_Zola.jpg" alt="Pantheon crypte" />
+          <p>Crypte in the Panthéon where he's currently buried</p>
+        </div>
+      </section>
       <a href="/" class="link">Back Home</a>
     </div>
   </body>
